change error response body type to string
