# docs/swagger.json
@@ -52,19 +52,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "type": "string"
                         }
                     },
                     "404": {
                         "description": "Product with specified SKU or Id not found",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "type": "string"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "type": "string"
                         }
                     }
                 }
@@ -107,19 +107,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/ResponseErrorProduct"
+                            "type": "string"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "type": "string"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "type": "string"
                         }
                     }
                 }
@@ -150,13 +150,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/ResponseErrorProduct"
+                            "type": "string"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "type": "string"
                         }
                     }
                 }
@@ -185,19 +185,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "type": "string"
                         }
                     },
                     "404": {
                         "description": "Product with specified SKU or Id not found",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "type": "string"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "type": "string"
                         }
                     }
                 }
@@ -271,13 +271,13 @@
                     "404": {
                         "description": "product with such SKU does not exist",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "type": "string"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "type": "string"
                         }
                     }
                 }
@@ -315,19 +315,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/ResponseErrorProduct"
+                            "type": "string"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "type": "string"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "type": "string"
                         }
                     }
                 }
@@ -350,13 +350,13 @@
                     "404": {
                         "description": "product with such SKU does not exist",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "type": "string"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ResponseError"
+                            "type": "string"
                         }
                     }
                 }
@@ -421,28 +421,6 @@
                 },
                 "type": {
                     "type": "string"
-                }
-            }
-        },
-        "ResponseError": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "description": "occurred error",
-                    "type": "string"
-                }
-            }
-        },
-        "ResponseErrorProduct": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "description": "occurred error",
-                    "type": "string"
-                },
-                "product": {
-                    "description": "product with same SKU as the product in request in case of collision",
-                    "$ref": "#/definitions/Product"
                 }
             }
         }
